Add support for parenthesized expressions